--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,10 +2,8 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Time To Quit!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<p>Welcome to your new app.</p>
 
 <Counter />
