--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,9 +1,84 @@
-﻿@page "/"
+﻿@using Microsoft.EntityFrameworkCore
+@using QuitSmoking.Data
+@page "/"
 
-<PageTitle>Index</PageTitle>
+@inject IDbContextFactory<UserDataContext> UserDataContextFactory;
 
-<h1>Time To Quit!</h1>
+<PageTitle>Our Employees</PageTitle>
 
-<p>Welcome to your new app.</p>
+@if (ShowCreate)
+{
 
-<Counter />
+    <h3>Add a New Employee</h3>
+    <div class="row">
+        <label for="Name" class="col-4 col-form-label">Full Name</label>
+        <div class="col-8">
+            <input id="Name" name="FullName" type="text" class="form-control" @bind="@NewUser.Name">
+        </div>
+    </div>
+    <div class="row">
+        <label for="UserName" class="col-4 col-form-label">User Name</label>
+        <div class="col-8">
+            <input id="UserName" name="Email" type="text" class="form-control" @bind="@NewUser.UserName">
+        </div>
+    </div>
+    <div class="row">
+        <label for="Password" class="col-4 col-form-label">Password</label>
+        <div class="col-8">
+            <input id="Password" name="Password" type="text" class="form-control" @bind="@NewUser.Password">
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="Email" class="col-4 col-form-label">Email</label>
+        <div class="col-8">
+            <input id="Email" name="Email" type="text" class="form-control" @bind="@NewUser.Email">
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="offset-4 col-8">
+            <button name="submit" type="submit" class="btn btn-primary" @onclick="CreateNewUser">Submit</button>
+        </div>
+    </div>
+
+}
+else
+{
+    <div class="form-group row">
+        <div class="offset-4 col-8">
+            <button name="submit" type="submit" class="btn btn-primary" @onclick="ShowCreateForm">Add a New User</button>
+        </div>
+    </div>
+
+@if (@OurUsers is not null && @OurUsers.Count > 0)
+    {
+        <div class="table-responsive">
+            <table class="table table-striped table-hover table-bordered table-light border-dark">
+                <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">User Name</th>
+                        <th scope="col">Password</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Edit</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+            <tbody>
+            @foreach (var user in OurUsers)
+            {
+                    <tr>
+                        <th scope="row">@user.Id</th>
+                            <td>@user.Name</td>
+                            <td>@user.UserName</td>
+                            <td>@user.Password</td>
+                            <td>@user.Email</td>
+                            <td></td>
+                            <td></td>
+                    </tr>
+            }
+            </tbody>
+            </table>
+        </div>
+    }
+}
