Added Update operation

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -48,37 +48,68 @@ else
             <button name="submit" type="submit" class="btn btn-primary" @onclick="ShowCreateForm">Add a New User</button>
         </div>
     </div>
-
+}
 @if (@OurUsers is not null && @OurUsers.Count > 0)
-    {
-        <div class="table-responsive">
-            <table class="table table-striped table-hover table-bordered table-light border-dark">
-                <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">User Name</th>
-                        <th scope="col">Password</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Edit</th>
-                        <th scope="col">Delete</th>
-                    </tr>
-                </thead>
-            <tbody>
-            @foreach (var user in OurUsers)
+{
+    <div class="table-responsive">
+        <table class="table table-striped table-hover table-bordered table-light border-dark">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">User Name</th>
+                    <th scope="col">Password</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Edit</th>
+                    <th scope="col">Delete</th>
+                </tr>
+            </thead>
+        <tbody>
+        @foreach (var user in OurUsers)
+        {
+            @if (!@EditRecord)
             {
+                <tr>
+                    <th scope="row">@user.Id</th>
+                    <td>@user.Name</td>
+                    <td>@user.UserName</td>
+                    <td>@user.Password</td>
+                    <td>@user.Email</td>
+                    <td><button name="submit" type="submit" class="btn btn-primary" @onclick="() => ShowEditForm(user)">Edit</button></td>
+                    <td></td>
+                </tr>
+            }
+            else
+            {
+                if (UserToUpdate is not null && UserToUpdate.Id == @user.Id)
+                {
                     <tr>
                         <th scope="row">@user.Id</th>
-                            <td>@user.Name</td>
-                            <td>@user.UserName</td>
-                            <td>@user.Password</td>
-                            <td>@user.Email</td>
-                            <td></td>
-                            <td></td>
+                        <td><input id="Name" name="Name" type="text" class="form-control" @bind="@UserToUpdate.Name" /></td>
+                        <td><input id="UserName" name="UserName" type="text" class="form-control" @bind="@UserToUpdate.UserName" /></td>
+                        <td><input id="Password" name="Password" type="text" class="form-control" @bind="@UserToUpdate.Password" /></td>
+                        <td><input id="Email" name="Email" type="text" class="form-control" @bind="@UserToUpdate.Email" /></td>
+                        <td><button name="submit" type="submit" class="btn btn-primary" @onclick="@UpdateUser">Save</button></td>
+                        <td></td>
                     </tr>
+                }
+                else
+                {
+                    <tr>
+                        <th scope="row">@user.Id</th>
+                        <td>@user.Name</td>
+                        <td>@user.UserName</td>
+                        <td>@user.Password</td>
+                        <td>@user.Email</td>
+                        <td> <button name="submit" type="submit" class="btn btn-primary" @onclick="() => ShowEditForm(user)">Edit</button></td>
+                        <td></td>
+                    </tr>
+                }
             }
-            </tbody>
-            </table>
-        </div>
+
+        }
+        </tbody>
+        </table>
+    </div>
     }
 }
